fix(oidc): verify userinfo JWT against IdP's JWKS, not client_auth JWKS [DHIS2-20043]
The previous SignedJwtUserInfoLoader was passing
DhisOidcClientRegistration.jwkSetUrl (which is DHIS2's *own* JWKS URL,
used to advertise client-auth keys for private_key_jwt) to JwkSourceCache
when verifying the userinfo JWT. That URL would never resolve the IdP's
signing keys, so signature verification would always fail in production.

Switched to ClientRegistration.providerDetails.jwkSetUri (populated from
the jwk_uri config key — already required and validated). Updated the
test to mock that endpoint accordingly. No extra parser validation is
needed because jwk_uri is already in the required-keys map.

Also addressed code-review nits in the same change:
- replaced Collections.singletonList with List.of (per AGENTS.md)
- added disabledUserRaisesUserDisabled test exercising the user_disabled
  error code path

AI Assisted

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>